--- a/sass/blocks/media/_cities.scss
+++ b/sass/blocks/media/_cities.scss
@@ -8,6 +8,9 @@
   .cities-wrapper {
     grid-template: auto / repeat(3, 1fr);
   }
+  .cities-mobile__list {
+    grid-template: auto / repeat(3, 1fr);
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -16,5 +19,14 @@
   }
   .cities-wrapper {
     grid-template: auto / repeat(2, 1fr);
+  }
+  .cities-mobile__list {
+    grid-template: auto / repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cities-mobile__list {
+    grid-template: auto / 1fr;
   }
 }
