--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -180,6 +180,10 @@
         }
       }
     }
+    &.just-title {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   //footer bottom
