--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 			<div class="footer-nav">
-				<div class="footer-menu">
+				<div class="footer-menu just-title">
 					<a href="#">
 						<h5>Каталог</h5>
 					</a>
